fix invalid property value for line height on dark mode logo

--- a/sass/email/01_atom/_a-logo.scss
+++ b/sass/email/01_atom/_a-logo.scss
@@ -19,7 +19,7 @@
             float: none !important;
             max-height: inherit !important;
             max-width: inherit !important;
-            line-height: auto !important;
+            line-height: inherit !important;
             visibility: inherit !important;
         }
         
